--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Ekachai Kanya</h1>
+            <h1>Hi, I'm Sawasdichai Amornpradubkool</h1>
+            <p>1660700863</p>
+            <p>Delivery 5/2/2569</p>
             <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p>
+            
             <a href="portfolio.html" class="btn">View My Work</a>
         </div>
     </header>
@@ -55,8 +58,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Ekachai Kanya. All rights reserved.</p>
-        <p>ekachai.k@bu.ac.th</p>
+        <p>&copy; 2026 Sawasdichai Amornpradubkool. All rights reserved.</p>
+        <p>sawasdichai.amor@bu.ac.th</p>
     </footer>
 
 </body>
