--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <h1>Hi, I'm Sawasdichai Amornpradubkool</h1>
             <p>1660700863</p>
             <p>Delivery 5/2/2569</p>
+            <p>Subject: IT464 Web Administration : Assignment04 CI/CD</p>
             <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p>
             
             <a href="portfolio.html" class="btn">View My Work</a>
